@@ -16,6 +16,7 @@
  */
 package org.apache.lucene.util;
 
+import java.io.IOException;
 import org.apache.lucene.search.DocIdSet;
 import org.apache.lucene.search.DocIdSetIterator;
 
@@ -57,7 +58,18 @@ public class BitDocIdSet extends DocIdSet {
     return new BitSetIterator(set, cost);
   }
 
-  @Override
+  /**
+   * Provides a {@link Bits} interface for random access to matching documents.
+   *
+   * @return {@code null}, if this {@code DocIdSet} does not support random access. In contrast to
+   *     {@link #iterator()}, a return value of {@code null} <b>does not</b> imply that no documents
+   *     match the filter! The default implementation does not provide random access, so you only
+   *     need to implement this method if your DocIdSet can guarantee random access to every docid
+   *     in O(1) time without external disk access (as {@link Bits} interface cannot throw {@link
+   *     IOException}). This is generally true for bit sets like {@link
+   *     org.apache.lucene.util.FixedBitSet}, which return itself if they are used as {@code
+   *     DocIdSet}.
+   */
   public BitSet bits() {
     return set;
   }
